--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
     <!-- js links -->
     <script type="text/javascript" src="../static/js/d3.min.js"></script>
     <script type="text/javascript" src="../static/js/crossfilter.min.js"></script>
-    <script type="text/javascript" src="../static/js/dc.js"></script>
+    <script type="text/javascript" src="../static/js/dc.min.js"></script>
     <script type="text/javascript" src="../static/js/queue.min.js"></script>
     
     <script src="../static/js/graph.js"></script>
@@ -47,9 +47,11 @@
     </div>
 </div>
 
-<!--line graph showing population growth -->
+<!--bar graph showing population total -->
 
-<div id="pop-growth"></div>
+<div id="pop-total"></div>
+
+
 <div id="pop-growth-line"></div>
 
 
