second commit after configuring dataset into the console

--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
 
 <!--bar graph showing population total -->
 
-<div id="pop-total"></div>
+<canvas id="pop-total" width="500" height="500"></canvas>
 
 
 <div id="pop-growth-line"></div>
