commit after re-jigging data and js file

--- a/html/index.html
+++ b/html/index.html
@@ -98,8 +98,11 @@
     
         
         <!-- table of data -->
-        <div class="table">
-            <div class="col-md-6">
+        <div class="data-table">
+            <div class="header">
+                <span> Country </span>
+                <span> Year </span>
+                <span> Population (billions)</span>
             </div>
         </div>
 
