--- a/html/index.html
+++ b/html/index.html
@@ -58,7 +58,7 @@
             <h5> What do you think about the world's population from these graphs?</h5>
             <p> According to the UN World Data Bank, the world’s population is 7.6 billion and is expected to reach 8.6 billion in 2030, 9.8 billion by 2050 and 11.2 billion in 2100. Roughly, 83 million people are being added to the world’s population every
                 year, the upward trend in population size is expected to continue, even assuming that fertility levels will continue to decline. </p>
-            <button onclick="change_data_display()">How about in a bar chart?</button>
+            <button class="btn btn-secondary btn-lg btn-block" onclick="change_data_display()">How about in a bar chart?</button>
         </div>
     </div>
 
@@ -72,7 +72,7 @@
                 <h5>How about hovering over the graph to see the differences of male to female population over time.</h5>
                 <p>The sex ratio – the share of the population that is male or female – varies greatly across the world. Globally, in 2017, the share of women in the world was 49.6%. There are many factors that can contribute to why there is a difference
                     between men and women. Can you name a few?
-                    <div class="hint" id="ratioHint" onmouseover="show_hint(this)" onmouseout="hide_hint(this)" style="background-color:#3d52d5;width:100%"> Hint?</div>
+                    <div class="btn btn-secondary btn-lg btn-block" id="ratioHint" onmouseover="show_hint(this)" onmouseout="hide_hint(this)"> Hint?</div>
                 </p>
             </div>
         </div>
@@ -85,7 +85,12 @@
 
     <div class="graph-three">
         <div class="col-12">
-            <canvas id="" width="800" height="500"></canvas>
+            <h3> Percentage Comparison of Women and Men in the World - Comparing 1960 to today </h3>
+            <div id="percent-stackChart"></div>
+            <h5> What do you think - are men or women dominating the world's total population?</h5>
+            <p>As you can see in the stacked chart, we see that the difference isn't huge but that the number of men in the world has increased while women have decreased. In general, however, the world's total population have a very close male to female
+                ratio which fluctuates between 49 - 51%. For more information take a look at the UN Data World Bank!</p>
+
         </div>
     </div>
 
@@ -95,7 +100,18 @@
 
     <div class="graph-four">
         <div class="col-12">
+            <h3> Population Today</h3>
+            <button class="btn btn-secondary btn-lg btn-block" onclick="show_pop_table()"> Click here to view a table of population by country</button>
+            <div id="population_table"></div>
 
+            <table class="objecttable">
+                <thead>
+                    <tr>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
         </div>
     </div>
 
@@ -126,6 +142,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <script src="../static/js/graph.js"></script>
+    <script type="text/javascript" src="../static/js/table.js"></script>
 
     <script src="https://kit.fontawesome.com/ac319f9005.js" crossorigin="anonymous"></script>
 
