--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h3> Total Population Stats from 1960 - 2018</h3>
         <div id="pop-total-line"></div>
         <div id="pop-total-bar" style="display: none"></div>
-        <button class="btn btn-secondary btn-lg btn-block" id="change-graph-btn" onclick="change_data_display()"></button>
+        <button class="btn btn-secondary btn-lg btn-block" id="change-graph-btn" onclick="change_data_display()">How about in a bar chart?</button>
         <!--     <button class="btn btn-secondary btn-lg btn-block" onclick="change_data_display" style="display: none">Let's go back to that Line Graph...</button> -->
 
         <h5> What do you think about the world's population from these graphs?</h5>
