--- a/index.html
+++ b/index.html
@@ -9,177 +9,199 @@
 
     <!-- css style links -->
     <!-- bootstrap -->
+    <link rel="stylesheet" href="static/css/bootswatch.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
-
-    <!-- font awesome -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    
     <!-- css link -->
     <link rel="stylesheet" href="static/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Quicksand:300,400,500,600,700&display=swap" rel="stylesheet">
 
     <!-- js links -->
-    <script type="text/javascript" src="static/js/d3.v5.js"></script>
-    <script type="text/javascript" src="static/js/crossfilter.js"></script>
-    <script type="text/javascript" src="static/js/dc.js"></script>
-    <script type="text/javascript" src="static/js/queue.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.js"></script>
 
-    <script src="static/js/graph.js"></script>
-    <script src="static/js/table.js"></script>
+    <script type="text/javascript" src="static/js/bargraph.js"></script>
+    <script type="text/javascript" src="static/js/linegraph.js"></script>
+    <script type="text/javascript" src="static/js/sexratio.js"></script>
+    <script type="text/javascript" src="static/js/stack.js"></script>
+
+
+
+ <!--   <script src="static/js/graph.js"></script>-->
+  <!--  <script src="static/js/table.js"></script> -->
 
 
 </head>
 
+<body>
 
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Welcome to PopStats</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Welcome to PopStats</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#graph-one">Total Population Growth <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#graph-two">Sex Ratio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#graph-three">Gender Today</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#graph-four">Population Table</a>
-                </li>
-            </ul>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#graph-one">Total Population Growth <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#graph-two">Sex Ratio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#graph-three">Gender Today</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#graph-four">Population Table</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+
+    <div class="container-fluid callout-container">
+        <!-- Callout -->
+        <div class="opaque-overlay">&nbsp;</div>
+        <div class="col-12">
+            <section class="callout jumbotron text-center">
+                <h1> WORLD </h1>
+                <h2>Population Statistics </h2>
+            </section>
         </div>
-    </nav>
-</header>
-
-
-<div class="container-fluid callout-container">
-    <!-- Callout -->
-    <div class="opaque-overlay">&nbsp;</div>
-    <div class="col-12">
-        <section class="callout jumbotron text-center">
-            <h1> WORLD </h1>
-            <h2>Population Statistics </h2>
-        </section>
     </div>
-</div>
 
+    <div class="container-fluid" id="graph-one">
+        <div class="graph-one graphs dc-chart">
+            <!--bar graph showing population total -->
+            <div class="col-12">
+                <h3> Total Population Stats from 1960 - 2018</h3>
+                <hr class="block-divider">
+                <div id="pop-total-line"></div>
+                <div id="pop-total-bar"></div>
+                <button class="btn btn-secondary btn-lg btn-block" id="change-graph-btn" onclick="change_data_display()">How about in a bar chart?</button>
+                <!--     <button class="btn btn-secondary btn-lg btn-block" onclick="change_data_display()" style="display: none">Let's go back to that Line Graph...</button> -->
 
-<div class="graph-one graphs" id="graph-one">
-    <!--bar graph showing population total -->
-    <div class="col-12">
-        <h3> Total Population Stats from 1960 - 2018</h3>
-        <div id="pop-total-line"></div>
-        <div id="pop-total-bar" style="display: none"></div>
-        <button class="btn btn-secondary btn-lg btn-block" id="change-graph-btn" onclick="change_data_display()">How about in a bar chart?</button>
-        <!--     <button class="btn btn-secondary btn-lg btn-block" onclick="change_data_display" style="display: none">Let's go back to that Line Graph...</button> -->
-
-        <h5> What do you think about the world's population from these graphs?</h5>
-        <p> According to the UN World Data Bank, the world’s population is 7.6 billion and is expected to reach 8.6 billion in 2030, 9.8 billion by 2050 and 11.2 billion in 2100. Roughly, 83 million people are being added to the world’s population every year,
-            the upward trend in population size is expected to continue, even assuming that fertility levels will continue to decline. </p>
-
+                <h5> What do you think about the world's population from these graphs?</h5>
+                <p> According to the UN World Data Bank, the world’s population is 7.6 billion and is expected to reach 8.6 billion in 2030, 9.8 billion by 2050 and 11.2 billion in 2100. Roughly, 83 million people are being added to the world’s population
+                    every year, the upward trend in population size is expected to continue, even assuming that fertility levels will continue to decline. </p>
+            </div>
+        </div>
     </div>
-</div>
 
-<div class="container-fluid col-12 br-image-victoria">
-</div>
 
-<!-- graph showing composite data of population and gender percent -->
-<div class="graph-two graphs" id="graph-two">
-    <div class="col-12">
-        <h3> World Population Sex Ratio from 1960 - 2018</h3>
-        <div id="percentage-compositeChart">
-            <h5>How about hovering over the graph to see the differences of male to female population over time.</h5>
-            <p>The sex ratio – the share of the population that is male or female – varies greatly across the world. Globally, in 2017, the share of women in the world was 49.6%. There are many factors that can contribute to why there is a difference between
-                men and women. Can you name a few?
-                <div class="btn btn-secondary btn-lg btn-block" id="ratioHint" onmouseover="show_hint(this)" onmouseout="hide_hint(this)"> Hint?</div>
+
+    <div class="container-fluid col-12 br-image-victoria">
+    </div>
+
+    <div class="container-fluid" id="graph-two">
+        <!-- graph showing composite data of population and gender percent -->
+        <div class="graph-two graphs">
+            <div class="col-12">
+                <h3> World Population Sex Ratio from 1960 - 2018</h3>
+                <hr class="block-divider">
+                <div id="percentage-compositeChart">
+                    <h5>How about hovering over the graph to see the differences of male to female population over time.</h5>
+                    <p>The sex ratio – the share of the population that is male or female – varies greatly across the world. Globally, in 2017, the share of women in the world was 49.6%. There are many factors that can contribute to why there is a difference
+                        between men and women. Can you name a few?
+                        <div class="btn btn-secondary btn-lg btn-block" id="ratioHint" onmouseover="show_hint(this)" onmouseout="hide_hint(this)"> Hint?</div>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container-fluid col-12 br-image-market">
+    </div>
+
+    <div class="container-fluid" id="graph-three">
+        <!-- stacked chart representation of the comparison of men and women between 1960 and 2018 -->
+        <div class="graph-three graphs" id="graph-three">
+            <div class="col-12">
+                <h3> Percentage Comparison of Women and Men in the World - Comparing 1960 to today </h3>
+                <hr class="block-divider">
+                <div id="percent-stackChart"></div>
+                <h5> What do you think - are men or women dominating the world's total population?</h5>
+                <p>As you can see in the stacked chart, we see that the difference isn't huge but that the number of men in the world has increased while women have decreased. In general, however, the world's total population have a very close male to female
+                    ratio which fluctuates between 49 - 51%. For more information take a look at the UN Data World Bank!</p>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container-fluid col-12 br-image-kids">
+    </div>
+
+
+    <div class="container-fluid" id="graph-four">
+        <!--  showing population table -->
+        <div class="graph-four graphs" id="graph-four">
+            <div class="col-12">
+                <h3> Population Today</h3>
+                <hr class="block-divider">
+                <button class="btn btn-secondary btn-lg btn-block" id="population_table" onclick="showHide_pop_table()"> Click here to view a table of population by country</button>
+
+                <div id="population-table">
+
+                </div>
+
+              <!--  <table class="table table-hover" id="population_table" style="display: none">
+                    <thead id="head-columns">
+                        <tr>
+                            <th scope="col">Country</th>
+                            <th scope="col">Population in billions</th>
+                            <th scope="col">Percentage Female</th>
+                            <th scope="col">Percentage Male</th>
+                        </tr>
+                    </thead>
+                    <tbody id="row-data">
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>-->
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <footer class="container-fluid ">
+        <div class="col-md-6">
+            <p>
+                <a class="uppercase general-sub footer-heading" target="_blank" href="#">Source: Data World Bank</a>
             </p>
         </div>
-    </div>
-</div>
-
-<div class="container-fluid col-12 br-image-market">
-</div>
-
-
-<!-- stacked chart representation of the comparison of men and women between 1960 and 2018 -->
-<div class="graph-three graphs" id="graph-three">
-    <div class="col-12">
-        <h3> Percentage Comparison of Women and Men in the World - Comparing 1960 to today </h3>
-        <div id="percent-stackChart"></div>
-        <h5> What do you think - are men or women dominating the world's total population?</h5>
-        <p>As you can see in the stacked chart, we see that the difference isn't huge but that the number of men in the world has increased while women have decreased. In general, however, the world's total population have a very close male to female ratio
-            which fluctuates between 49 - 51%. For more information take a look at the UN Data World Bank!</p>
-
-    </div>
-</div>
-
-
-<div class="container-fluid col-12 br-image-kids">
-</div>
-
-<!--  showing population table -->
-<div class="graph-four graphs" id="graph-four">
-    <div class="col-12">
-        <h3> Population Today</h3>
-        <button class="btn btn-secondary btn-lg btn-block" onclick="showHide_pop_table()"> Click here to view a table of population by country</button>
-        <table class="table table-hover" id="population_table" style="display: none">
-            <thead id="head-columns">
-                <tr>
-                    <th scope="col">Country</th>
-                    <th scope="col">Population in billions</th>
-                    <th scope="col">Percentage Female</th>
-                    <th scope="col">Percentage Male</th>
-                </tr>
-            </thead>
-            <tbody id="row-data">
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
-
-
-
-
-<footer class="container-fluid ">
-    <div class="col-md-6">
-        <p>
-            <a class="uppercase general-sub footer-heading" target="_blank" href="#">Source: Data World Bank</a>
-        </p>
-    </div>
-    <div class="col-md-6">
-        <p class="uppercase general-sub footer-heading"> Share </p>
-        <ul class="list-inline social-links footer-text">
-            <li class="list-inline-item"><a target="_blank" href="/"><i class="fab fa-facebook" aria-hidden="true"></i><span
+        <div class="col-md-6">
+            <p class="uppercase general-sub footer-heading"> Share </p>
+            <ul class="list-inline social-links footer-text">
+                <li class="list-inline-item"><a target="_blank" href="/"><i class="fab fa-facebook" aria-hidden="true"></i><span
                     class="sr-only"> </span></a></li>
-            <li class="list-inline-item"><a target="_blank" href="#"><i class="fab fa-twitter"
+                <li class="list-inline-item"><a target="_blank" href="#"><i class="fab fa-twitter"
                                                                         aria-hidden="true"></i><span
                     class="sr-only"> </span></a></li>
-        </ul>
-    </div>
-</footer>
+            </ul>
+        </div>
+    </footer>
 
 
 
 
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-
-
-
-<script src="https://kit.fontawesome.com/ac319f9005.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/ac319f9005.js" crossorigin="anonymous"></script>
 
 
 </body>
