--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    
+
     <!-- css link -->
     <link rel="stylesheet" href="static/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Quicksand:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -28,12 +28,11 @@
     <script type="text/javascript" src="static/js/bargraph.js"></script>
     <script type="text/javascript" src="static/js/linegraph.js"></script>
     <script type="text/javascript" src="static/js/sexratio.js"></script>
-    <script type="text/javascript" src="static/js/stack.js"></script>
 
 
 
- <!--   <script src="static/js/graph.js"></script>-->
-  <!--  <script src="static/js/table.js"></script> -->
+    <!--   <script src="static/js/graph.js"></script>-->
+    <!--  <script src="static/js/table.js"></script> -->
 
 
 </head>
@@ -83,9 +82,9 @@
             <div class="col-12">
                 <h3> Total Population Stats from 1960 - 2018</h3>
                 <hr class="block-divider">
-                <div id="pop-total-line"></div>
-                <div id="pop-total-bar"></div>
-                <button class="btn btn-secondary btn-lg btn-block" id="change-graph-btn" onclick="change_data_display()">How about in a bar chart?</button>
+                <div id="pop-total-line" class="col-12 graph-styling"></div>
+                <div id="pop-total-bar" class="col-12 graph-styling" style="display:none"></div>
+                <button class="btn btn-secondary btn-lg btn-block" id="btn-text" onclick="change_data_display()">How about in a bar chart?</button>
                 <!--     <button class="btn btn-secondary btn-lg btn-block" onclick="change_data_display()" style="display: none">Let's go back to that Line Graph...</button> -->
 
                 <h5> What do you think about the world's population from these graphs?</h5>
@@ -106,13 +105,11 @@
             <div class="col-12">
                 <h3> World Population Sex Ratio from 1960 - 2018</h3>
                 <hr class="block-divider">
-                <div id="percentage-compositeChart">
-                    <h5>How about hovering over the graph to see the differences of male to female population over time.</h5>
-                    <p>The sex ratio – the share of the population that is male or female – varies greatly across the world. Globally, in 2017, the share of women in the world was 49.6%. There are many factors that can contribute to why there is a difference
-                        between men and women. Can you name a few?
-                        <div class="btn btn-secondary btn-lg btn-block" id="ratioHint" onmouseover="show_hint(this)" onmouseout="hide_hint(this)"> Hint?</div>
-                    </p>
-                </div>
+                <div id="percentage-compositeChart" class="col-12 graph-styling"></div>
+                <h5>How about hovering over the graph to see the differences of male to female population over time.</h5>
+                <p>The sex ratio – the share of the population that is male or female – varies greatly across the world. Globally, in 2017, the share of women in the world was 49.6%. There are many factors that can contribute to why there is a difference
+                    between men and women. Can you name a few? </p>
+                <div class="btn btn-secondary btn-lg btn-block" id="ratioHint" onmouseover="show_hint(this)" onmouseout="hide_hint(this)"> Hint?</div>
             </div>
         </div>
     </div>
@@ -127,7 +124,7 @@
             <div class="col-12">
                 <h3> Percentage Comparison of Women and Men in the World - Comparing 1960 to today </h3>
                 <hr class="block-divider">
-                <div id="percent-stackChart"></div>
+                <div id="percent-stackChart" class="col-12 graph-styling"></div>
                 <h5> What do you think - are men or women dominating the world's total population?</h5>
                 <p>As you can see in the stacked chart, we see that the difference isn't huge but that the number of men in the world has increased while women have decreased. In general, however, the world's total population have a very close male to female
                     ratio which fluctuates between 49 - 51%. For more information take a look at the UN Data World Bank!</p>
@@ -149,11 +146,9 @@
                 <hr class="block-divider">
                 <button class="btn btn-secondary btn-lg btn-block" id="population_table" onclick="showHide_pop_table()"> Click here to view a table of population by country</button>
 
-                <div id="population-table">
+                <div id="population-table" class="col-12 graph-styling"></div>
 
-                </div>
-
-              <!--  <table class="table table-hover" id="population_table" style="display: none">
+                <!--  <table class="table table-hover" id="population_table" style="display: none">
                     <thead id="head-columns">
                         <tr>
                             <th scope="col">Country</th>
