--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="col-12">
                 <h3> Percentage Comparison of Women and Men in the World - Comparing 1960 to today </h3>
                 <hr class="block-divider">
-                <div id="percent-stackChart" class="col-12 graph-styling"></div>
+                <div id="percent-stackChart" class="col-12 graph-styling stack-graph-style"></div>
                 <h5> What do you think - are men or women dominating the world's total population?</h5>
                 <p>As you can see in the stacked chart, we see that the difference isn't huge but that the number of men in the world has increased while women have decreased. In general, however, the world's total population have a very close male to female
                     ratio which fluctuates between 49 - 51%. For more information take a look at the <a href="https://data.worldbank.org/"> UN Data World Bank!</a></p>
