updated title of comp chart and added wireframes

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <!-- graph showing composite data of population and gender percent -->
         <div class="graph-two graphs">
             <div class="col-12">
-                <h3> World Population Sex Ratio from 1960 - 2018</h3>
+                <h3> Male to Female Comparison from 1960 - 2018</h3>
                 <hr class="block-divider">
                 <div id="compositeChart" class="col-12 graph-styling"></div>
                 <h5>How about hovering over the graph to see the differences of male to female population over time.</h5>
