mistake, amended and updated titles again

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <!-- stacked chart representation of the comparison of men and women between 1960 and 2018 -->
         <div class="graph-three graphs" id="graph-three">
             <div class="col-12">
-                <h3> One more Comparison of Women and Men in the World -  1960 to today </h3>
+                <h3> Male to Female Ratio </h3>
                 <hr class="block-divider">
                 <div id="percent-stackChart" class="col-12 graph-styling stack-graph-style"></div>
                 <h5> What do you think - are men or women dominating the world's total population?</h5>
