--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
 
     <div class="container-fluid" id="graph-two">
-        <!-- graph showing composite data of population and gender percent -->
+        <!-- graph showing composite data of population and gender  -->
         <div class="graph-two graphs">
             <div class="col-12">
                 <h3> Male to Female Comparison from 1960 - 2018</h3>
@@ -148,7 +148,7 @@
 
 
     <div class="container-fluid" id="graph-four">
-        <!--  showing population table -->
+        <!--  showing population table of all countries in world -->
         <div class="graph-four graphs" id="graph-four">
             <div class="col-12">
                 <h3> Population Today (2018/19)</h3>
